// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdminUsers /> should render correctly - index 1`] = `
<div>
  <div
    aria-label="Loading"
    class="sc-llJcti bkkie page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-ksZaOG duCsur"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG gPHHop"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG gPHHop"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG gPHHop"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG gPHHop"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with admin user 1`] = `
<div>
  <div>
    <div
      class="sc-kDDrLX emakin"
    >
      <a
        class="sc-iBkjds kXOvCG"
        href="/admin"
      >
        ⇠ Admin
      </a>
    </div>
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
    >
      Admin users
    </h1>
  </div>
  <div
    class="stackstyles__StyledHStack-sc-1m733wj-1 ilBDHD"
  >
    <button
      class="sc-bjUoiL hCXTDD outer"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-bjUoiL hCXTDD outer"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 dsmGNQ"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dlOQM"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 hxKxqM"
      >
        <a
          class="sc-kgflAQ dsjsur"
          href="/admin/users?highlight=new"
        >
          <div
            class="sc-fLlhyt jAThyu"
          >
            <div
              class="sc-bBrHrO cfVxES"
            />
            <div
              class="sc-ivTmOn cgbBSF"
            >
              <div
                class="split-detail-itemstyles__Item-sc-5gess9-0 cHrFus"
              >
                <div
                  class="sc-iqcoie fvEXqf"
                >
                  <h1
                    class="sc-dkzDqf ddFalQ sc-breuTD sbvki"
                    id="new-+"
                  >
                    New +
                  </h1>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with createError 1`] = `
<div>
  <div>
    <div
      class="sc-kDDrLX emakin"
    >
      <a
        class="sc-iBkjds kXOvCG"
        href="/admin"
      >
        ⇠ Admin
      </a>
    </div>
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
    >
      Admin users
    </h1>
  </div>
  <div
    class="stackstyles__StyledHStack-sc-1m733wj-1 ilBDHD"
  >
    <button
      class="sc-bjUoiL hCXTDD outer"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-bjUoiL hCXTDD outer"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 dsmGNQ"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dlOQM"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 hxKxqM"
      >
        <a
          class="sc-kgflAQ dsjsur"
          href="/admin/users?highlight=new"
        >
          <div
            class="sc-fLlhyt jAThyu"
          >
            <div
              class="sc-bBrHrO cfVxES"
            />
            <div
              class="sc-ivTmOn cgbBSF"
            >
              <div
                class="split-detail-itemstyles__Item-sc-5gess9-0 cHrFus"
              >
                <div
                  class="sc-iqcoie fvEXqf"
                >
                  <h1
                    class="sc-dkzDqf ddFalQ sc-breuTD sbvki"
                    id="new-+"
                  >
                    New +
                  </h1>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with creating=true 1`] = `
<div>
  <div>
    <div
      class="sc-kDDrLX emakin"
    >
      <a
        class="sc-iBkjds kXOvCG"
        href="/admin"
      >
        ⇠ Admin
      </a>
    </div>
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
    >
      Admin users
    </h1>
  </div>
  <div
    class="stackstyles__StyledHStack-sc-1m733wj-1 ilBDHD"
  >
    <button
      class="sc-bjUoiL hCXTDD outer"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-bjUoiL hCXTDD outer"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 dsmGNQ"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dlOQM"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 hxKxqM"
      >
        <a
          class="sc-kgflAQ dsjsur"
          href="/admin/users?highlight=new"
        >
          <div
            class="sc-fLlhyt jAThyu"
          >
            <div
              class="sc-bBrHrO cfVxES"
            />
            <div
              class="sc-ivTmOn cgbBSF"
            >
              <div
                class="split-detail-itemstyles__Item-sc-5gess9-0 cHrFus"
              >
                <div
                  class="sc-iqcoie fvEXqf"
                >
                  <h1
                    class="sc-dkzDqf ddFalQ sc-breuTD sbvki"
                    id="new-+"
                  >
                    New +
                  </h1>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with initial state 1`] = `
<div>
  <div
    aria-label="Loading"
    class="sc-llJcti bkkie page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-ksZaOG duCsur"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG gPHHop"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG gPHHop"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG gPHHop"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG gPHHop"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with loadError 1`] = `
<div>
  <div>
    <div
      class="sc-kDDrLX emakin"
    >
      <a
        class="sc-iBkjds kXOvCG"
        href="/admin"
      >
        ⇠ Admin
      </a>
    </div>
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
    >
      Admin users
    </h1>
  </div>
  <div
    class="stackstyles__StyledHStack-sc-1m733wj-1 ilBDHD"
  >
    <button
      class="sc-bjUoiL hCXTDD outer"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-bjUoiL hCXTDD outer"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Show filters
      </span>
    </button>
  </div>
  <span
    class="sc-cxabCf BrPUk"
  >
    <span
      class="sc-efBctP jFDViT"
    >
      Could not load users
      <br />
      Something went wrong
    </span>
  </span>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 dsmGNQ"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dlOQM"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 hxKxqM"
      >
        <a
          class="sc-kgflAQ dsjsur"
          href="/admin/users?highlight=new"
        >
          <div
            class="sc-fLlhyt jAThyu"
          >
            <div
              class="sc-bBrHrO cfVxES"
            />
            <div
              class="sc-ivTmOn cgbBSF"
            >
              <div
                class="split-detail-itemstyles__Item-sc-5gess9-0 cHrFus"
              >
                <div
                  class="sc-iqcoie fvEXqf"
                >
                  <h1
                    class="sc-dkzDqf ddFalQ sc-breuTD sbvki"
                    id="new-+"
                  >
                    New +
                  </h1>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with loading=true 1`] = `
<div>
  <div>
    <div
      class="sc-kDDrLX emakin"
    >
      <a
        class="sc-iBkjds kXOvCG"
        href="/admin"
      >
        ⇠ Admin
      </a>
    </div>
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
    >
      Admin users
    </h1>
  </div>
  <div
    class="stackstyles__StyledHStack-sc-1m733wj-1 ilBDHD"
  >
    <button
      class="sc-bjUoiL kQkTFv outer"
      disabled=""
      type="button"
    >
      <span
        class="sc-dIouRR dQEKTW"
      >
        Reload users
      </span>
      <div
        aria-hidden="true"
        class="sc-hHLeRK dAWrmh"
      >
        <div
          class="sc-fnykZs gCEWdg"
        >
          <div
            class="sc-fEOsli lkTqOy"
          />
          <div
            class="sc-fEOsli dxKqkG"
          />
          <div
            class="sc-fEOsli dGpXuh"
          />
          <div
            class="sc-fEOsli cIgRdg"
          />
          <div
            class="sc-fEOsli gZzohb"
          />
          <div
            class="sc-fEOsli zmfC"
          />
          <div
            class="sc-fEOsli gacaki"
          />
          <div
            class="sc-fEOsli cIrbJy"
          />
        </div>
      </div>
    </button>
    <button
      class="sc-bjUoiL hCXTDD outer"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 dsmGNQ"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dlOQM"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 hxKxqM"
      >
        <a
          class="sc-kgflAQ dsjsur"
          href="/admin/users?highlight=new"
        >
          <div
            class="sc-fLlhyt jAThyu"
          >
            <div
              class="sc-bBrHrO cfVxES"
            />
            <div
              class="sc-ivTmOn cgbBSF"
            >
              <div
                class="split-detail-itemstyles__Item-sc-5gess9-0 cHrFus"
              >
                <div
                  class="sc-iqcoie fvEXqf"
                >
                  <h1
                    class="sc-dkzDqf ddFalQ sc-breuTD sbvki"
                    id="new-+"
                  >
                    New +
                  </h1>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with removeError 1`] = `
<div>
  <div>
    <div
      class="sc-kDDrLX emakin"
    >
      <a
        class="sc-iBkjds kXOvCG"
        href="/admin"
      >
        ⇠ Admin
      </a>
    </div>
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
    >
      Admin users
    </h1>
  </div>
  <div
    class="stackstyles__StyledHStack-sc-1m733wj-1 ilBDHD"
  >
    <button
      class="sc-bjUoiL hCXTDD outer"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-bjUoiL hCXTDD outer"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 dsmGNQ"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dlOQM"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 hxKxqM"
      >
        <a
          class="sc-kgflAQ dsjsur"
          href="/admin/users?highlight=new"
        >
          <div
            class="sc-fLlhyt jAThyu"
          >
            <div
              class="sc-bBrHrO cfVxES"
            />
            <div
              class="sc-ivTmOn cgbBSF"
            >
              <div
                class="split-detail-itemstyles__Item-sc-5gess9-0 cHrFus"
              >
                <div
                  class="sc-iqcoie fvEXqf"
                >
                  <h1
                    class="sc-dkzDqf ddFalQ sc-breuTD sbvki"
                    id="new-+"
                  >
                    New +
                  </h1>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with removing=true 1`] = `
<div>
  <div>
    <div
      class="sc-kDDrLX emakin"
    >
      <a
        class="sc-iBkjds kXOvCG"
        href="/admin"
      >
        ⇠ Admin
      </a>
    </div>
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
    >
      Admin users
    </h1>
  </div>
  <div
    class="stackstyles__StyledHStack-sc-1m733wj-1 ilBDHD"
  >
    <button
      class="sc-bjUoiL hCXTDD outer"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-bjUoiL hCXTDD outer"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 dsmGNQ"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dlOQM"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 hxKxqM"
      >
        <a
          class="sc-kgflAQ dsjsur"
          href="/admin/users?highlight=new"
        >
          <div
            class="sc-fLlhyt jAThyu"
          >
            <div
              class="sc-bBrHrO cfVxES"
            />
            <div
              class="sc-ivTmOn cgbBSF"
            >
              <div
                class="split-detail-itemstyles__Item-sc-5gess9-0 cHrFus"
              >
                <div
                  class="sc-iqcoie fvEXqf"
                >
                  <h1
                    class="sc-dkzDqf ddFalQ sc-breuTD sbvki"
                    id="new-+"
                  >
                    New +
                  </h1>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with requestError 1`] = `
<div>
  <div>
    <div
      class="sc-kDDrLX emakin"
    >
      <a
        class="sc-iBkjds kXOvCG"
        href="/admin"
      >
        ⇠ Admin
      </a>
    </div>
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
    >
      Admin users
    </h1>
  </div>
  <div
    class="stackstyles__StyledHStack-sc-1m733wj-1 ilBDHD"
  >
    <button
      class="sc-bjUoiL hCXTDD outer"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-bjUoiL hCXTDD outer"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 dsmGNQ"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dlOQM"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 hxKxqM"
      >
        <a
          class="sc-kgflAQ dsjsur"
          href="/admin/users?highlight=new"
        >
          <div
            class="sc-fLlhyt jAThyu"
          >
            <div
              class="sc-bBrHrO cfVxES"
            />
            <div
              class="sc-ivTmOn cgbBSF"
            >
              <div
                class="split-detail-itemstyles__Item-sc-5gess9-0 cHrFus"
              >
                <div
                  class="sc-iqcoie fvEXqf"
                >
                  <h1
                    class="sc-dkzDqf ddFalQ sc-breuTD sbvki"
                    id="new-+"
                  >
                    New +
                  </h1>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with requesting=true 1`] = `
<div>
  <div>
    <div
      class="sc-kDDrLX emakin"
    >
      <a
        class="sc-iBkjds kXOvCG"
        href="/admin"
      >
        ⇠ Admin
      </a>
    </div>
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
    >
      Admin users
    </h1>
  </div>
  <div
    class="stackstyles__StyledHStack-sc-1m733wj-1 ilBDHD"
  >
    <button
      class="sc-bjUoiL hCXTDD outer"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-bjUoiL hCXTDD outer"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 dsmGNQ"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dlOQM"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 hxKxqM"
      >
        <a
          class="sc-kgflAQ dsjsur"
          href="/admin/users?highlight=new"
        >
          <div
            class="sc-fLlhyt jAThyu"
          >
            <div
              class="sc-bBrHrO cfVxES"
            />
            <div
              class="sc-ivTmOn cgbBSF"
            >
              <div
                class="split-detail-itemstyles__Item-sc-5gess9-0 cHrFus"
              >
                <div
                  class="sc-iqcoie fvEXqf"
                >
                  <h1
                    class="sc-dkzDqf ddFalQ sc-breuTD sbvki"
                    id="new-+"
                  >
                    New +
                  </h1>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with updateError 1`] = `
<div>
  <div>
    <div
      class="sc-kDDrLX emakin"
    >
      <a
        class="sc-iBkjds kXOvCG"
        href="/admin"
      >
        ⇠ Admin
      </a>
    </div>
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
    >
      Admin users
    </h1>
  </div>
  <div
    class="stackstyles__StyledHStack-sc-1m733wj-1 ilBDHD"
  >
    <button
      class="sc-bjUoiL hCXTDD outer"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-bjUoiL hCXTDD outer"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 dsmGNQ"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dlOQM"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 hxKxqM"
      >
        <a
          class="sc-kgflAQ dsjsur"
          href="/admin/users?highlight=new"
        >
          <div
            class="sc-fLlhyt jAThyu"
          >
            <div
              class="sc-bBrHrO cfVxES"
            />
            <div
              class="sc-ivTmOn cgbBSF"
            >
              <div
                class="split-detail-itemstyles__Item-sc-5gess9-0 cHrFus"
              >
                <div
                  class="sc-iqcoie fvEXqf"
                >
                  <h1
                    class="sc-dkzDqf ddFalQ sc-breuTD sbvki"
                    id="new-+"
                  >
                    New +
                  </h1>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with updating=true 1`] = `
<div>
  <div>
    <div
      class="sc-kDDrLX emakin"
    >
      <a
        class="sc-iBkjds kXOvCG"
        href="/admin"
      >
        ⇠ Admin
      </a>
    </div>
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
    >
      Admin users
    </h1>
  </div>
  <div
    class="stackstyles__StyledHStack-sc-1m733wj-1 ilBDHD"
  >
    <button
      class="sc-bjUoiL hCXTDD outer"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-bjUoiL hCXTDD outer"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 dsmGNQ"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dlOQM"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 hxKxqM"
      >
        <a
          class="sc-kgflAQ dsjsur"
          href="/admin/users?highlight=new"
        >
          <div
            class="sc-fLlhyt jAThyu"
          >
            <div
              class="sc-bBrHrO cfVxES"
            />
            <div
              class="sc-ivTmOn cgbBSF"
            >
              <div
                class="split-detail-itemstyles__Item-sc-5gess9-0 cHrFus"
              >
                <div
                  class="sc-iqcoie fvEXqf"
                >
                  <h1
                    class="sc-dkzDqf ddFalQ sc-breuTD sbvki"
                    id="new-+"
                  >
                    New +
                  </h1>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with user 1`] = `
<div>
  <div
    class="sc-iqcoie fvEXqf"
  >
    <h1
      class="sc-gsnTZi cTWewb sc-breuTD kCJHVK"
      id="admin-only"
    >
      Admin only
    </h1>
    <span
      class="sc-cxabCf BrPUk"
    >
      You need to be logged in with an admin account to view this content.
      <br />
      <a
        class="sc-iBkjds kXOvCG"
        href="/login"
      >
        Got a different admin account? Log in here.
      </a>
    </span>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with users 1`] = `
<div>
  <div>
    <div
      class="sc-kDDrLX emakin"
    >
      <a
        class="sc-iBkjds kXOvCG"
        href="/admin"
      >
        ⇠ Admin
      </a>
    </div>
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
    >
      Admin users
    </h1>
  </div>
  <div
    class="stackstyles__StyledHStack-sc-1m733wj-1 ilBDHD"
  >
    <button
      class="sc-bjUoiL hCXTDD outer"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-bjUoiL hCXTDD outer"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Show filters
      </span>
    </button>
  </div>
  <span
    class="sc-cxabCf BrPUk admin-usersstyles__Count-sc-1qwrqg1-0 jJBuWT"
  >
    Showing 
    3
     of 
    3
     users
  </span>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 dsmGNQ"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dlOQM"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 hxKxqM"
      >
        <a
          class="sc-kgflAQ dsjsur"
          href="/admin/users?highlight=new"
        >
          <div
            class="sc-fLlhyt jAThyu"
          >
            <div
              class="sc-bBrHrO cfVxES"
            />
            <div
              class="sc-ivTmOn cgbBSF"
            >
              <div
                class="split-detail-itemstyles__Item-sc-5gess9-0 cHrFus"
              >
                <div
                  class="sc-iqcoie fvEXqf"
                >
                  <h1
                    class="sc-dkzDqf ddFalQ sc-breuTD sbvki"
                    id="new-+"
                  >
                    New +
                  </h1>
                </div>
              </div>
            </div>
          </div>
        </a>
        <a
          class="sc-kgflAQ dsjsur"
          href="/admin/users?highlight=1"
          id="1"
        >
          <div
            class="sc-fLlhyt jAThyu"
          >
            <div
              class="sc-bBrHrO cfVxES"
            />
            <div
              class="sc-ivTmOn cgbBSF"
            >
              <div
                class="split-detail-itemstyles__Item-sc-5gess9-0 cHrFus"
              >
                <div
                  class="sc-iqcoie fvEXqf"
                >
                  <h1
                    class="sc-dkzDqf ddFalQ sc-breuTD sbvki"
                    id="name"
                  >
                    name
                  </h1>
                  <span
                    class="sc-cxabCf BrPUk"
                  >
                    <br />
                    id: 
                    1
                  </span>
                </div>
              </div>
            </div>
          </div>
        </a>
        <a
          class="sc-kgflAQ dsjsur"
          href="/admin/users?highlight=2"
          id="2"
        >
          <div
            class="sc-fLlhyt jAThyu"
          >
            <div
              class="sc-bBrHrO cfVxES"
            />
            <div
              class="sc-ivTmOn cgbBSF"
            >
              <div
                class="split-detail-itemstyles__Item-sc-5gess9-0 cHrFus"
              >
                <div
                  class="sc-iqcoie fvEXqf"
                >
                  <h1
                    class="sc-dkzDqf ddFalQ sc-breuTD sbvki"
                    id="another"
                  >
                    another
                  </h1>
                  <span
                    class="sc-cxabCf BrPUk"
                  >
                    <br />
                    id: 
                    2
                  </span>
                </div>
              </div>
            </div>
          </div>
        </a>
        <a
          class="sc-kgflAQ dsjsur"
          href="/admin/users?highlight=3"
          id="3"
        >
          <div
            class="sc-fLlhyt jAThyu"
          >
            <div
              class="sc-bBrHrO cfVxES"
            />
            <div
              class="sc-ivTmOn cgbBSF"
            >
              <div
                class="split-detail-itemstyles__Item-sc-5gess9-0 cHrFus"
              >
                <div
                  class="sc-iqcoie fvEXqf"
                >
                  <h1
                    class="sc-dkzDqf ddFalQ sc-breuTD sbvki"
                    id="a-third"
                  >
                    a third
                  </h1>
                  <span
                    class="sc-cxabCf BrPUk"
                  >
                    <br />
                    id: 
                    3
                  </span>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;
